[gd_scene load_steps=3 format=3 uid="uid://jwib2s54yu6p"]

[ext_resource type="Script" uid="uid://c520kjrmt122o" path="res://entities/components/melee_base.gd" id="1_4yu3y"]
[ext_resource type="PackedScene" uid="uid://c0bf8jxm155at" path="res://entities/components/AttackComponent.tscn" id="2_nl4gj"]

[node name="MeleeBase" type="Node2D"]
script = ExtResource("1_4yu3y")

[node name="AttackComponent" parent="." instance=ExtResource("2_nl4gj")]

[node name="DamageCooldownTimer" type="Timer" parent="."]
one_shot = true
